--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+    <style>*{
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+    }</style>
     <title>React Admin App</title>
   </head>
   <body>
